adding the sorting algorithms to project

--- a/report.ipynb
+++ b/report.ipynb
@@ -5,20 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Algoritmi de sortare"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "html"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "<h1> Algoritmi diferiti de sortare </h1>"
+    "#Algoritmi de sortare\n"
    ]
   },
   {
@@ -36,6 +23,19 @@
    ],
    "source": [
     "print(\"hello, world!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "html"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "<h1> hello <h1>"
    ]
   }
  ],
